fix some Java 17 things and disable flink, fixes #4036 (#4037)
* fix some test , #4036

* fix some more java issues, #4036

* remove nashorn, invalid license, fixes #4036